--- a/index.html
+++ b/index.html
@@ -92,14 +92,23 @@
 
 
 <p style="color:red;">
-	Please email me if you are interested in joining our lab. 
-	We have Postdoc/PhD/RA openings in multimodal learning, computational pathology, and bioinformatics. Please contact me if you are interested in this opportunity.
+	We are looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in medical AI, multimodal learning, computational pathology, and biomedical informatics. 
+	Welcome to drop me an email with your CV and transcripts. 
 </p>
 
+<p style="color:red;">
+	[New in Dec 2023] We have Postdoc/RA openings in multimodal learning and computational pathology. Please contact me if you are interested in this opportunity.
+</p>
+
+	
 <h2>News</h2>
 
 <div style="height: 240px; overflow: auto;">
 <ul>
+	<li>
+		[12/2023] Two papers were accepted by AAAI 2023.
+	</li>
+	
 	<li>
 		[09/2023] Two papers were accepted by NeurIPS 2023.
 	</li>
@@ -164,25 +173,37 @@
 	<p><font face="Arial" size="4"><b>2023</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">Adaptive Uncertainty Estimation via High-Dimensional Testing on Latent Representations</a><br>
+		<a href="https://arxiv.org/abs/2310.16587" target="_blank">Adaptive Uncertainty Estimation via High-Dimensional Testing on Latent Representations</a><br>
 		Tsai Hor Chan, Kin Wai Lau, Jiajun Shen, Guosheng Yin, <b>Lequan Yu</b>.<br>
 		<em>Conference on Neural Information Processing Systems</em> (<i><b>NeurIPS</b></i>), 2023.</br>
 	</li>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/HKU-MedAI/bnn_uncertainty" target="_blank">code</a>]
+		</p>
 	<li>
-		<a href="" target="_blank">IDRNet: Intervention-Driven Relation Network for Semantic Segmentation</a><br>
+		<a href="https://arxiv.org/abs/2310.10755" target="_blank">IDRNet: Intervention-Driven Relation Network for Semantic Segmentation</a><br>
 		Zhenchao Jin, Xiaowei Hu, Lingting Zhu, Luchuan Song, Li Yuan, <b>Lequan Yu</b>.<br>
 		<em>Conference on Neural Information Processing Systems</em> (<i><b>NeurIPS</b></i>), 2023.</br>
 	</li>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/SegmentationBLWX/sssegmentation" target="_blank">code</a>]
+		</p>
 	<li>
 		<a href="https://arxiv.org/abs/2308.13324" target="_blank">ConSlide: Asynchronous Hierarchical Interaction Transformer with Breakup-Reorganize Rehearsal for Continual Whole Slide Image Analysis</a><br>
 		Yanyan Huang, Weiqin Zhao, Shujun Wang, Yu Fu, Yuming Jiang, <b>Lequan Yu</b>.<br>
 		<em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2023.</br>
 	</li>	
+		<p style="margin-top:3px">
+			[<a href="https://github.com/HKU-MedAI/ConSlide" target="_blank">code</a>]
+		</p>
 	<li>
 		<a href="https://arxiv.org/abs/2309.07400" target="_blank">HIGT: Hierarchical Interaction Graph-Transformer for Whole Slide Image Analysis</a><br>
 		Ziyu Guo, Weiqin Zhao, Shujun Wang, <b>Lequan Yu</b>.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2023.</br>
 	</li>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/HKU-MedAI/HIGT" target="_blank">code</a>]
+		</p>
 	<li>
 		<a href="https://arxiv.org/abs/2307.10094" target="_blank">Make-A-Volume: Leveraging Latent Diffusion Models for Cross-Modality 3D Brain MRI Synthesis</a><br>
 		Lingting Zhu, Zeyue Xue, Zhenchao Jin, Xian Liu, Jingzhen He, Ziwei Liu, <b>Lequan Yu</b>.<br>
@@ -229,6 +250,9 @@
 		Duowen Chen, Yunhao Bai, Wei Shen, Qingli Li, <b>Lequan Yu</b>, Yan Wang. <br>
 		<em>IEEE/CVF Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2023.</br>
 	</li>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/DeepMed-Lab-ECNU/MagicNet" target="_blank">code</a>]
+		</p>
 	<li>
 		<a href="https://ieeexplore.ieee.org/document/10061470" target="_blank">Hybrid Graph Convolutional Network with Online Masked Autoencoder for Robust Multimodal Cancer Survival Prediction</a><br>
 		Wentai Hou, Chengxuan Lin, <b>Lequan Yu</b>, Jing Qin, Rongshan Yu, Liansheng Wang.<br>
@@ -333,18 +357,6 @@
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2022.</br>
 	</li>
 	
-<!--
-	<li>
-		<a href="https://ieeexplore.ieee.org/abstract/document/9741294" target="_blank">All-Around Real Label Supervision: Cyclic Prototype Consistency Learning for Semi-supervised Medical Image Segmentation</a><br>
-		Zhe Xu, Yixin Wang, Donghuan Lu, <b>Lequan Yu</b>, Jiangpeng Yan, Jie Luo, Kai Ma, Yefeng Zheng, Raymond Kai-yu Tong. <br>
-		<em>IEEE Journal of Biomedical and Health Informatics</em> (<i><b>JBHI</b></i>), 2022.</br>
-	</li>
-	<li>
-		<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/jbio.202200045" target="_blank">Single Pixel Imaging via Unsupervised Deep Compressive Sensing with Collaborative Sparsity in Discretized Feature Space</a><br>
-		Mengyu Jia, <b>Lequan Yu</b>, Wenxing Bai, Pengfei Zhang, Limin Zhang, Wei Wang, Feng Gao. <br>
-		<em>Journal of Biophotonics</em>, 2022.</br>
-	</li>
--->
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S1361841522000251" target="_blank">Novel-view X-ray Projection Synthesis through Geometry-integrated Deep Learning</a><br>
 		Liyue Shen, <b>Lequan Yu</b>, Wei Zhao, John Pauly, Lei Xing. <br>
@@ -415,6 +427,7 @@
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2021.</br>
 	</li>
 	</ul>
+	
 	<p><font face="Arial" size="4"><b>2020</b></font></p> 
 	<ul>
 
@@ -499,27 +512,13 @@
 			[<a href="https://github.com/xmengli999/TCSM" target="_blank">code</a>]
 		</p>
 	</li>
+
+	</ul>
 	
-	<!--
-	<li>
-		<a href="https://arxiv.org/abs/2002.03366" target="_blank">MS-Net: Multi-Site Network for Improving Prostate Segmentation with Heterogeneous MRI Data</a><br>
-		Quande Liu, Qi Dou, <b>Lequan Yu</b>, and Pheng-Ann Heng.<br>
-		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
-		<p style="margin-top:3px">
-			[<a href="https://github.com/liuquande/MS-Net" target="_blank">code</a>]
-		</p>
-	</li>	
-	-->
-	<!--
-	<li>
-		<a href="https://arxiv.org/abs/1811.12506" target="_blank">3D Semi-supervised Learning with Uncertainty-aware Multi-view Co-training</a><br>
-		Yingda Xia, Fengze Liu, Dong Yang, Jinzheng Cai, <b>Lequan Yu</b>, Zhuotun Zhu, Daguang Xu, Alan Yuille, and Holger Roth.<br>
-		<em>Winter Conference on Applications of Computer Vision</em> (<i><b>WACV</b></i>), 2020.</br>
-	</li>
-	-->
-</ul>
-<p><font face="Arial" size="4"><b>2019</b></font></p> 
-<ul>
+	<p><font face="Arial" size="4"><b>Before 2020</b></font></p> 
+	
+	<ul>
+		
 	<li>
 		<a href="https://arxiv.org/abs/1907.07034" target="_blank">Uncertainty-aware Self-ensembling Model for Semi-supervised 3D Left Atrium Segmentation</a><br>
 		<b>Lequan Yu</b>, Shujun Wang, Xiaomeng Li, Chi-Wing Fu, and Pheng-Ann Heng.<br>
@@ -544,24 +543,6 @@
 		<em>Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2019.</br>
 	</li>
 	
-	
-	<li>
-		<a href="https://arxiv.org/abs/1906.11143" target="_blank">Boundary and Entropy-driven Adversarial Learning for Fundus Image Segmentation</a><br>
-		Shujun Wang*, <b>Lequan Yu</b>*, Kang Li, Xin Yang, Chi-Wing Fu, and Pheng-Ann Heng.<br>
-		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2019.</br>
-		<p style="margin-top:3px">
-			[<a href="https://github.com/EmmaW8/BEAL" target="_blank">code</a>]
-		</p>
-	</li>
-	
-	<!--
-	<li>
-		<a href="https://arxiv.org/abs/1910.04331" target="_blank">Agent with Warm Start and Active Termination for Plane Localization in 3D Ultrasound</a><br>
-		Haoran Dou*, Xin Yang*, Jikuan Qian, Wufeng Xue, Hao Qin, Xu Wang, <b>Lequan Yu</b>, Shujun Wang, Yi Xiong, Pheng-Ann Heng, and Dong Ni.<br>
-		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2019. <b>[Oral Presentation]</b></br>
-	</li>
-	-->
-
 	<li>
 		<a href="https://arxiv.org/abs/1902.07519" target="_blank">Patch-based Output Space Adversarial Learning for Joint Optic Disc and Cup Segmentation</a><br>
 		Shujun Wang, <b>Lequan Yu</b>, Xin Yang, Chi-Wing Fu, and Pheng-Ann Heng.<br>
@@ -571,20 +552,6 @@
 			[<a href="https://emmaw8.github.io/pOSAL/index.html" target="_blank">project</a>]
 		</p>
 	</li>
-</ul>
-<p><font face="Arial" size="4"><b>2018</b></font></p> 
-<ul>
-	<!--
-	<li>
-		<a href="https://books.google.com.hk/books?hl=en&lr=&id=FapxDwAAQBAJ&oi=fnd&pg=PA385&dq=info:8JlAPwVugm8J:scholar.google.com&ots=ILpS6QfLy2&sig=nMf-w6UeWV4VLvat3G1s1SYLGNU&redir_esc=y#v=onepage&q&f=false" target="_blank">Deep Convolutional Networks for Automated Volumetric Cardiovascular Image Segmentation: From a Design Perspective</a><br>
-		Xin Yang, <b>Lequan Yu</b>, Qi Dou, Jing Qin, and Pheng-Ann Heng.<br>
-		<em>Book Chapter:Cardiovascular Imaging and Image Analysis</em>, 2018.</br>
-		<p style="margin-top:3px">
-			[<a href="https://github.com/yulequan/HeartSeg" target="_blank">code1</a>] 
-			[<a href="https://github.com/xy0806/miccai17-mmwhs-hybrid" target="_blank">code2</a>]
-		</p>
-	</li>
-	-->
 	<li>
 		<a href="https://arxiv.org/abs/1801.06761" target="_blank">PU-Net: Point Cloud Upsampling Network</a><br>
 		<b>Lequan Yu</b>, Xianzhi Li, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng.<br>
@@ -618,15 +585,6 @@
 		</p>
 	</li>
 
-	<li>
-		<a href="https://arxiv.org/abs/1808.03887" target="_blank">Semi-supervised Skin Lesion Segmentation via Transformation Consistent Self-ensembling Model</a><br>
-		Xiaomeng Li, <b>Lequan Yu</b>, Hao Chen, Chi-Wing Fu, Pheng-Ann Heng.<br>
-		<em>British Machine Vision Conference</em> (<i><b>BMVC</b></i>), 2018.</br>
-	</li>
-
-</ul>
-<p><font face="Arial" size="4"><b>Before 2018</b></font></p> 
-<ul>
 	<li>
 		<a href="https://aaai.org/ocs/index.php/AAAI/AAAI17/paper/view/14719" target="_blank">Volumetric ConvNets with Mixed Residual Connections for Automated Prostate Segmentation from 3D MR Images</a><br>
 		<b>Lequan Yu</b>, Xin Yang, Hao Chen, Jing Qin, Pheng-Ann Heng.<br>
@@ -667,21 +625,6 @@
 	</li>
 
 	<li>
-		<a href="https://link.springer.com/chapter/10.1007/978-3-319-66182-7_81" target="_blank">Towards Automatic Semantic Segmentation in Volumetric Ultrasound</a><br>
-		Xin Yang, <b>Lequan Yu</b>, Shengli Li, Xu Wang, Na Wang, Jing Qin, Dong Ni, Pheng-Ann Heng.<br>
-		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2017. <b>[Oral Presentation]</b></br>
-		<p style="margin-top:3px">
-			[<a href="http://appsrv.cse.cuhk.edu.hk/~xinyang/3d_is_proj/3d_is_proj_index.html" target="_blank">project</a>]
-		</p>
-	</li>
-
-	<li>
-		<a href="https://arxiv.org/abs/1612.01655" target="_blank">Fine-grained Recurrent Neural Networks for Automatic Prostate Segmentation in Ultrasound Images</a><br>
-		Xin Yang, <b>Lequan Yu</b>, Lingyun Wu, Yi Wang, Dong Ni, Jing Qin, Pheng-Ann Heng.<br>
-		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2017. <b>[Oral Presentation]</b></br>
-	</li>
-
-	<li>
 		<a href="https://www.sciencedirect.com/science/article/pii/S1361841517300725" target="_blank">3D Deeply Supervised Network for Automated Segmentation of Volumetric Medical Images</a><br>
 		Qi Dou, <b>Lequan Yu</b>, Hao Chen, Yueming Jin, Xin Yang, Jing Qin, Pheng-Ann Heng.<br>
 		<em>Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2017.<br>
@@ -692,13 +635,6 @@
 		</p>
 	</li>
 	
-	<!--
-	<li>
-		<a href="https://www.sciencedirect.com/science/article/pii/S1053811917303348" target="_blank">VoxResNet: Deep Voxelwise Residual Networks for Volumetric Brain Segmentation</a><br>
-		Hao Chen, Qi Dou, <b>Lequan Yu</b>, Jing Qin, Pheng-Ann Heng.<br>
-		<em><b>NeuroImage</b></em>, 2017.</br>
-	</li>
-	--> 
 
 	<li>
 		<a href="https://link.springer.com/chapter/10.1007/978-3-319-52280-7_10" target="_blank">3D FractalNet: Dense Volumetric Segmentation for Cardiovascular MRI Volumes</a><br>
@@ -710,24 +646,6 @@
 		</p>
 		
 	</li>
-
-	<!--
-	<li>
-		<a href="https://ieeexplore.ieee.org/document/7576695" target="_blank">Multi-level Contextual 3D CNNs for False Positive Reduction in Pulmonary Nodule Detection</a><br>
-		Qi Dou, Hao Chen, <b>Lequan Yu</b>, Jing Qin, Pheng-Ann Heng.<br>
-		<em>IEEE Transactions on Biomedical Engineering</em> (<i><b>TBME</b></i>), 2016.</br>
-	</li>
-	
-
-	<li>
-		<a href="https://arxiv.org/abs/1604.02677" target="_blank">DCAN: Deep Contour-Aware Networks for Accurate Gland Segmentation</a><br>
-		Hao Chen, Xiaojuan Qi, <b>Lequan Yu</b>, Pheng-Ann Heng.<br>
-		<em>IEEE Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2016.</br>
-		<p style="margin-top:3px">
-			[<a href="http://appsrv.cse.cuhk.edu.hk/~hchen/research/2015miccai_gland.html" target="_blank">project</a>]
-		</p>
-	</li>
-    -->
 	
 	<li>
 		<a href="https://ieeexplore.ieee.org/document/7403984" target="_blank">Automatic Detection of Cerebral Microbleeds from MR Images via 3D Convolutional Neural Networks</a><br>
@@ -739,14 +657,6 @@
 		</p>
 	</li>
 
-	<!--
-	<li>
-		<a href="https://ieeexplore.ieee.org/abstract/document/7163984" target="_blank">Automatic Detection of Cerebral Microbleeds via Deep Learning Based 3D Feature Representation</a><br>
-		Hao Chen*, <b>Lequan Yu*</b>, Qi Dou, Lin Shi, Vincent CT Mok, Pheng-Ann Heng.<br>
-		<em>IEEE International Symposium on Biomedical Imaging</em> (<i><b>ISBI</b></i>), 2015.</br>
-		
-	</li>
-	-->	
 </ul>
 <br>
 </div>
