--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	
 <p>	
 	Before joining HKU, I was a postdoctoral research fellow at <a href="https://www.stanford.edu/">Stanford University</a>, working with Prof. <a href="https://med.stanford.edu/xinglab.html">Lei Xing</a>. 
-	I obtained my Ph.D. degree in <a href="http://www.cse.cuhk.edu.hk/">CSE</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a> in July 2019 
+	I obtained my Ph.D. degree in <a href="http://www.cse.cuhk.edu.hk/">CSE</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a> in 2019 
 	and the B.Eng degree in <a href="http://www.cs.zju.edu.cn/">CS</a>, <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015.
 </p>
 
