--- a/index.html
+++ b/index.html
@@ -93,14 +93,13 @@
 
 <p style="color:red;">
 	We are looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in medical AI, multimodal learning, computational pathology, and biomedical informatics. 
-	Welcome to drop me an email with your CV and transcripts. 
+	Welcome to drop me an email with your CV and transcripts. You can also apply for <a href="https://gradsch.hku.hk/news_and_events/news_and_future_events/summer-research-programme-2024">HKU Summer Research Programme 2024</a>.
 </p>
 
 <p style="color:red;">
-	[New in Dec 2023] We have Postdoc/RA openings in multimodal learning and computational pathology. Please contact me if you are interested in this opportunity.
+	[New in Dec 2023] We have Postdoc/RA openings in multimodal learning and computational pathology. Please contact me if you are interested in this opportunity (<a href="./MedAI_202312.pdf" target="_blank">Details</a>).
 </p>
 
-	
 <h2>News</h2>
 
 <div style="height: 240px; overflow: auto;">
