--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[12/2023] Two papers were accepted by AAAI 2023.
+		[12/2023] Two papers were accepted by AAAI 2024.
 	</li>
 	
 	<li>
@@ -170,6 +170,24 @@
 		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
 	</ul>
 -->
+	<p><font face="Arial" size="4"><b>2024</b></font></p>
+	<ul>
+	<li>
+		<a href="" target="_blank">Boosting Multiple Instance Learning Models for Whole Slide Image Classification: A Model-agnostic Framework Based on Counterfactual Inference</a><br>
+		Weiping Lin, Zhenfeng Zhuang, <b>Lequan Yu</b>, Liansheng Wang.<br>
+		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2024.</br>
+	</li>
+	<li>
+		<a href="https://arxiv.org/abs/2401.11674" target="_blank">Memory-Efficient Prompt Tuning for Incremental Histopathology Classification</a><br>
+		Yu Zhu, Kang Li, <b>Lequan Yu</b>, Pheng-Ann Heng.<br>
+		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2024.</br>
+	</li>
+	<li>
+		<a href="" target="_blank">DER-GAN: Dual-Energy Recovery GAN for Conebeam CT</a><br>
+		Jiajun Xiang, Aihua Mao, Jiayi Xie, Hongbin Han, Xianghong Wang, Peng Jin, Jichen Du, Mingchao Ding, <b>Lequan Yu</b>, Tianye Niu.<br>
+		<em>IEEE Transactions on Computational Imaging</em> (<i><b>TCI</b></i>), 2024.</br>
+	</li>
+	</ul>	
 	<p><font face="Arial" size="4"><b>2023</b></font></p>
 	<ul>
 	<li>
