--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2024.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">DER-GAN: Dual-Energy Recovery GAN for Conebeam CT</a><br>
+		<a href="https://ieeexplore.ieee.org/abstract/document/10376449" target="_blank">DER-GAN: Dual-Energy Recovery GAN for Conebeam CT</a><br>
 		Jiajun Xiang, Aihua Mao, Jiayi Xie, Hongbin Han, Xianghong Wang, Peng Jin, Jichen Du, Mingchao Ding, <b>Lequan Yu</b>, Tianye Niu.<br>
 		<em>IEEE Transactions on Computational Imaging</em> (<i><b>TCI</b></i>), 2024.</br>
 	</li>
