--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	Specifically, we focus on: 
 	1) developing multimodal learning algorithms (e.g., multimodal foundation model) to integrate multi-scale biomedical data for disease prevention, diagnosis, prognosis, and treatment design; 
 	2) building real-world learning systems to learn generalizable, trustworthy, and fair representations from imperfect medical data;
-	and 3) developing causality-based learning algorithms to improve their interpretability for healthcare problems.
+	and 3) developing causality-driven learning algorithms to improve their interpretability and safety for healthcare problems.
 	
 </p>
 	
