--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[02/2024] One paper was accepted by CVPR 2024.
+	</li>
+	<li>
+		[01/2024] Invited to serve as Area Chair in MICCAI 2024.
+	</li>
+	<li>
 		[12/2023] Two papers were accepted by AAAI 2024.
 	</li>
 	
