--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	
 <p style="color:red;">
 	We are looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in medical AI, multimodal learning, computational pathology, and biomedical informatics. 
-	Welcome to drop me an email with your CV and transcripts. You can also apply for <a href="https://gradsch.hku.hk/news_and_events/news_and_future_events/summer-research-programme-2024">HKU Summer Research Programme 2024</a>.
+	Welcome to drop me an email with your CV and transcripts. 
 </p>
 
 
@@ -738,6 +738,18 @@
 <h2>Recent Talks &amp; Presentations</h2>
 <ul>
 	<li>
+		<b>Leveraging Deep Learning in Computational Pathology: from Single-modal to Multi-modal Analysis</b> <br>
+		at The Third Affiliated Hospital of Sun Yat-sen University, April 2024.<br>
+		at Zhejiang Lab, Hangzhou, July 2023.<br>
+		at Shanghai AI Lab, Shanghai, July 2023.<br>
+		at Computational Health seminar, Helmholtz AI, German, July 2023.<br>
+	</li>
+	<li>
+		<b>Learning generalized medical visual representation from accompanied medical reports</b> <br>
+		at MICS online seminar, April 2023.<br>
+		at Department of Biomedical Engineering, SZU, April 2023.<br>
+	</li>
+	<li>
 		<b>Medical Image Analysis and Reconstruction with Data-efficient Learning</b> <br>
 		at VALSE 2022 workshop "医学数据分析中的深度学习方法", August 2022. <br>
 		at Beihang University, May 2022. <br>
@@ -769,12 +781,13 @@
 <table style="border-spacing:2px">
 	
 		<tbody>
+		<tr><td>The world’s top 1% scholars ranked by Clarivate Analytics</a>, 2023 </td></tr>
 		<tr><td>MICCAI 2023 Young Scientist Publication Impact Award Runner-up</a>, 2023 </td></tr>
 		<tr><td>国家教育部高等学校科学研究优秀成果奖(科学技术), 自然科学二等奖 (排名: 4/5)</a>, 2022 </td></tr>
-		<tr><td>Ranked Top 2% of Scientists on <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3">Stanford List</a>, 2022 \& 2023</td></tr>
+		<tr><td>Ranked Top 2% of Scientists on <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3">Stanford List</a>, 2022 and 2023</td></tr>
 		<tr><td><a href="https://xueshu.baidu.com/usercenter/index/aischolar2022">the World's First List of Top 150 Chinese Young Scholars in Artificial Intelligence</a>, 2022 </td></tr>
 		<tr><td>Rising Star of Science Award by <a href="https://research.com/scientists-rankings/rising-stars">Research.com</a>, 2022 </td></tr>
-		<tr><td>IEEE TMI Distinguished Reviewer Platinum Level, 2022 </td></tr>
+		<tr><td>IEEE TMI Distinguished Reviewer Platinum Level, 2022 and 2023 </td></tr>
 		<tr><td>IEEE TMI Distinguished Reviewer Silver Level, 2021 </td></tr>
 		<tr><td> <a href="https://www.cse.cuhk.edu.hk/en/achievement/student/1317-dr-yu-lequan-received-cuhk-young-scholar-thesis-award-2019">CUHK Young Scholars Thesis Award 2019</a></td></tr>
 		<tr><td> Young Scientist Award Short-listed, Hong Kong Institution of Science, 2019 </td></tr>
@@ -801,10 +814,10 @@
 <li>	
 	<b>Program Committees:</b>
 	<br>
-	Area Chair of Medical Image Computing and Computer Assisted Intervention (MICCAI’22)<br>
+	Area Chair of Medical Image Computing and Computer Assisted Intervention (MICCAI’22-24)<br>
 	Senior Program Committee of AAAI Conference on Artificial Intelligence (AAAI’22)<br>
-	Co-organizer of ICCV'21 workshop on Computer Vision for Automated Medical Diagnosis<br>
 	Senior Program Committee of International Joint Conference on Artificial Intelligence (IJCAI’21)<br>
+	Co-organizer of ICCV workshop on Computer Vision for Automated Medical Diagnosis (ICCV'21 and ICCV'23)<br>
 	<p style="margin-top:3px"></p>		
 </li>
 	
@@ -827,6 +840,8 @@
 	<b>Journal Reviews:</b>
 	<br>
 	Nature Machine Intelligence <br>
+	Nature Computational Science <br>
+	Nature Communications <br>
 	IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)<br>
 	International Journal of Computer Vision (IJCV) <br>
 	Medical Image Analysis (MedIA)<br>
@@ -840,15 +855,6 @@
 	IEEE Transactions on Dependable and Secure Computing<br>
 	IEEE Journal of Biomedical and Health Informatics (JBHI)<br>
 	IEEE Robotics and Automation Letters (RA-L)<br>
-	ACM Transactions on Computing for Healthcare<br>
-	Pattern Recognition<br>
-	Medical Physics <br>
-	Neurocomputing <br>		
-	International Journal of Computer Assisted Radiology and Surgery (IJCARS)<br>
-	International Journal of Medical Informatics<br>
-	Journal of Applied Clinical Medical Physics (JACMP) <br>
-	Artificial Intelligence in Medicine<br>
-	Computer Methods and Programs in Biomedicine (CMPB)<br>
 	<p style="margin-top:3px"></p>		
 </li>
 <br>
@@ -857,19 +863,20 @@
 <div id="teaching">
 <h2>Teaching</h2>
 <table id="tbTeaching" border="0" width="100%">
-	<tbody>
+	<body>
 		<tr>
-			<td> 2023 Spring</td><td>STAT8021 Big Data Analytics</td>
+			<td> 2023&2024 Spring</td><td>STAT8021 Big Data Analytics</td>
 		</tr>
 		<tr>
-			<td> 2023 Spring</td><td>STAT8307 Natural Language Processing and Text Analysis</td>
+			<td> 2023&2024 Spring</td><td>STAT8307 Natural Language Processing and Text Analysis</td>
+		</tr>
+		<tr>
+			<td> 2022&2023 Fall</td><td>STAT3612 Statistical Machine Learning</td>
 		</tr>
 		<tr>
 			<td> 2022 Fall</td><td>BIOF1001 Introduction to Biomedical Data Science (guest lecture)</td>
 		</tr>
-		<tr>
-			<td> 2022 Fall</td><td>STAT3612 Statistical Machine Learning</td>
-		</tr>
+
 		<tr>
 			<td> 2022 Spring</td><td>APAI4011/STAT4011 Natural Language Processing</td>
 		</tr>
