--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[07/2024] Two papers were accepted by ECCV 2024.
+	</li>
+	<li>
+		[06/2024] Three papers were accepted by MICCAI 2024.
+	</li>
+	<li>
 		[02/2024] One paper was accepted by CVPR 2024.
 	</li>
 	<li>
