--- a/index.html
+++ b/index.html
@@ -185,7 +185,38 @@
 	<p><font face="Arial" size="4"><b>2024</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">Boosting Multiple Instance Learning Models for Whole Slide Image Classification: A Model-agnostic Framework Based on Counterfactual Inference</a><br>
+		<a href="https://arxiv.org/abs/2407.15158" target="_blank">HERGen: Elevating Radiology Report Generation with Longitudinal Data</a><br>
+		Fuying Wang, Shenghui Du, <b>Lequan Yu</b>.<br>
+		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2024.</br>
+	</li>
+	<li>
+		<a href="https://arxiv.org/abs/2407.11448" target="_blank">cDP-MIL: Robust Multiple Instance Learning via Cascaded Dirichlet Process</a><br>
+		Yihang Chen, Tsai Hor Chan, Guosheng Yin, Yuming Jiang, <b>Lequan Yu</b>.<br>
+		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2024.</br>
+	</li>
+
+	<li>
+		<a href="https://arxiv.org/abs/2402.03302" target="_blank">Swin-UMamba: Mamba-based UNet with ImageNet-based pretraining</a><br>
+		Jiarun Liu, Hao Yang, Hong-Yu Zhou, Yan Xi, <b>Lequan Yu</b>, Yizhou Yu, Yong Liang, Guangming Shi, Shaoting Zhang, Hairong Zheng, Shanshan Wang.<br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2024.</br>
+	</li>
+	<li>
+		<a href="" target="_blank">ORCGT: Ollivier-Ricci Curvature-based Graph Model for Lung STAS Prediction</a><br>
+		Min Cen, Zheng Wang, Zhenfeng Zhuang, Hong Zhang, Dan Su, Zhen Bao, Weiwei Wei, Baptiste Magnier, <b>Lequan Yu</b>, Liansheng Wang.<br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2024.</br>
+	</li>
+	<li>
+		<a href="" target="_blank">Advancing H&E-to-IHC Virtual Staining with Task-Specific Domain Knowledge for HER2 Scoring</a><br>
+		Qiong Peng, Weiping Lin, Yihuang Hu, Ailisi Bao, Chenyu Lian, Weiwei Wei, Meng Yue, Jingxin Liu, <b>Lequan Yu</b>, Liansheng Wang.<br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2024.</br>
+	</li>
+	<li>
+		<a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Zhou_L2B_Learning_to_Bootstrap_Robust_Models_for_Combating_Label_Noise_CVPR_2024_paper.pdf" target="_blank">L2B: Learning to Bootstrap Robust Models for Combating Label Noise</a><br>
+		Yuyin Zhou, Xianhang Li, Fengze Liu, Qingyue Wei, Xuxi Chen, <b>Lequan Yu</b>, Cihang Xie, Matthew P. Lungren, Lei Xing.<br>
+		<em>IEEE/CVF Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2024.</br>
+	</li>
+	<li>
+		<a href="https://ojs.aaai.org/index.php/AAAI/article/view/28135" target="_blank">Boosting Multiple Instance Learning Models for Whole Slide Image Classification: A Model-agnostic Framework Based on Counterfactual Inference</a><br>
 		Weiping Lin, Zhenfeng Zhuang, <b>Lequan Yu</b>, Liansheng Wang.<br>
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2024.</br>
 	</li>
