--- a/index.html
+++ b/index.html
@@ -725,15 +725,19 @@
 	<tbody>
 		<tr><td> <a href="https://howardchanth.github.io" target="_blank">Howard Tsai Hor Chan</a> (BSc at HKU)(PhD Student, 2021-)</td></tr>
 		<tr><td> <a href="https://github.com/fuying-wang" target="_blank">Fuying Wang</a> (BEng at Tsinghua)(PhD Student, 2021-)</td></tr>
-		<tr><td> Weiqin Zhao (BEng at Beihang)(PhD Student, 2021-)</td></tr>
-		<tr><td> <a href="https://github.com/Advocate99" target="_blank">Lingting Zhu</a> (BEng at ZJU)(PhD Student, 2021-) (HKU-PS)</td></tr>
+		<tr><td> <a href="https://scholar.google.com/citations?hl=zh-CN&user=s3MpAVgAAAAJ" target="_blank"> Weiqin Zhao</a> (BEng at Beihang)(PhD Student, 2021-)</td></tr>
+		<tr><td> <a href="https://scholar.google.com/citations?user=TPD_P98AAAAJ" target="_blank">Lingting Zhu</a> (BEng at ZJU)(PhD Student, 2021-) (HKU-PS)</td></tr>
 		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (MPhil at USTC)(PhD Student, 2022-) </td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)(PhD Student, 2022-)(HKU-PS)</td></tr>
 		<tr><td> Yihang Chen (BSc at RUC)(PhD Student, 2023-)</td></tr>		
-		<tr><td> Yanyan Huang (MPhil at ZJU)(PhD Student, 2023-)</td></tr>
+		<tr><td> <a href="https://yanyanh.com/" target="_blank">Yanyan Huang</a>a (MPhil at ZJU)(PhD Student, 2023-)</td></tr>
 		<tr><td> Feng Wu (MPhil at ZJU)(PhD Student, 2023-)</td></tr>
 		<tr><td> Jiacheng Xu (BSc at HKU)(PhD Student, 2023-)(HKPF)</td></tr>
 		<tr><td> Liting Yu (BSc at XJTU)(PhD Student, 2023-)</td></tr>	
+		<tr><td> Yushi Feng (BSc at HKU)(PhD Student, 2024-)</td></tr>	
+		<tr><td> Tao Ma (MPhil at PKU)(PhD Student, 2024-)</td></tr>
+		<tr><td> Ziyan Xiao (BASc at PKU)(PhD Student, 2024-)(HKPF)</td></tr>
+		<tr><td> Ruiyang Zhang (MSc at NUS)(PhD Student, 2024-)(HKPF)</td></tr>
 	</tbody>
 	</table>
 	<br>
@@ -753,9 +757,11 @@
 	<b>Previous Mentorship:</b>
 	<br>
 	<table style="border-spacing:2px">
-	<tbody>
-		<tr><td> Jiacheng Xu (Undergraduate Intern) (BSc at HKU --> PhD at HKU)</td></tr>
-		<tr><td> Wing Kwan Pang (Undergraduate Intern) (BSc at HKU --> MS Biostatistics at McGill)</td></tr>
+	<body>
+		<tr><td> Ziyan Xiao (2024 Undergraduate Intern) (BASc at HKU --> PhD at HKU)</td></tr>
+		<tr><td> Jiayi Xin (2024 Undergraduate Intern) (BASc at HKU --> PhD at UPenn)</td></tr>
+		<tr><td> Jiacheng Xu (2023 Undergraduate Intern) (BSc at HKU --> PhD at HKU)</td></tr>
+		<tr><td> Wing Kwan Pang (2023 Undergraduate Intern) (BSc at HKU --> MPhil at HKU)</td></tr>
 		<tr><td> Xi Zheng (2022 Summer Intern) (BSc at XJTU --> IS PhD at UW)</td></tr>
 		<tr><td> Tengfei Cui (2022 Summer Intern) (BSc at XJ-Liverpool --> MS Biostatistics at UW)</td></tr>
 		<tr><td> <a href="https://yiqings.github.io/" target="_blank">Yiqing Shen</a> (2021 Summer Intern) (BSc at SJTU --> CS PhD at JHU)</td></tr>
