--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
 		<tr><td> Liting Yu (BSc at XJTU)(PhD Student, 2023-)</td></tr>	
 		<tr><td> Yushi Feng (BSc at HKU)(PhD Student, 2024-)</td></tr>	
 		<tr><td> Tao Ma (MPhil at PKU)(PhD Student, 2024-)</td></tr>
-		<tr><td> Ziyan Xiao (BASc at PKU)(PhD Student, 2024-)(HKPF)</td></tr>
+		<tr><td> Ziyan Xiao (BASc at HKU)(PhD Student, 2024-)(HKPF)</td></tr>
 		<tr><td> Ruiyang Zhang (MSc at NUS)(PhD Student, 2024-)(HKPF)</td></tr>
 	</tbody>
 	</table>
