--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
 		<tr><td> Yushi Feng (BSc at HKU)(PhD Student, 2024-)</td></tr>	
 		<tr><td> Tao Ma (MPhil at PKU)(PhD Student, 2024-)</td></tr>
 		<tr><td> Ziyan Xiao (BASc at HKU)(PhD Student, 2024-)(HKPF)</td></tr>
-		<tr><td> Ruiyang Zhang (MSc at NUS)(PhD Student, 2024-)(HKPF)</td></tr>
+		<tr><td> Ruiyang Zhang (MSc at NUS)(PhD Student, 2024-)</td></tr>
 	</tbody>
 	</table>
 	<br>
