--- a/index.html
+++ b/index.html
@@ -758,8 +758,9 @@
 	<br>
 	<table style="border-spacing:2px">
 	<body>
-		<tr><td> Ziyan Xiao (2024 Undergraduate Intern) (BASc at HKU --> PhD at HKU)</td></tr>
 		<tr><td> Jiayi Xin (2024 Undergraduate Intern) (BASc at HKU --> PhD at UPenn)</td></tr>
+		<tr><td> Ziyan Xiao (2024 Undergraduate Intern) (BASc at HKU --> PhD at HKU)</td></tr>
+		<tr><td> Yushi Feng (2024 Undergraduate Intern) (BSc at HKU --> PhD at HKU)</td></tr>
 		<tr><td> Jiacheng Xu (2023 Undergraduate Intern) (BSc at HKU --> PhD at HKU)</td></tr>
 		<tr><td> Wing Kwan Pang (2023 Undergraduate Intern) (BSc at HKU --> MPhil at HKU)</td></tr>
 		<tr><td> Xi Zheng (2022 Summer Intern) (BSc at XJTU --> IS PhD at UW)</td></tr>
@@ -767,7 +768,7 @@
 		<tr><td> <a href="https://yiqings.github.io/" target="_blank">Yiqing Shen</a> (2021 Summer Intern) (BSc at SJTU --> CS PhD at JHU)</td></tr>
 		<tr><td> Ruichen Luo (2021 Summer Intern) (BEng at ZJU --> ECE PhD at UMN)</td></tr>
 		<tr><td> Xiaoyu Zhang (2021 Summer Intern) (BEng at ZJU --> MCDS at CMU)</td></tr>
-		<tr><td> Zeqi Xiao (2021 Summer Intern) (BEng at ZJU --> Intern at Shanghai AI Lab)</td></tr>
+		<tr><td> Zeqi Xiao (2021 Summer Intern) (BEng at ZJU --> PhD at NTU)</td></tr>
 		<tr><td> <a href="https://yijun-yang.github.io/" target="_blank">Yijun Yang</a> (2021 Summer Intern) (BEng at SDU --> PhD at HKUST-GZ)</td></tr> 
 		<tr><td> Kang Li (Ph.D. at CUHK) (now, Postdoc at CUHK)</td></tr>
 		<tr><td> <a href="https://emma-sjwang.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK) (now, Asst. Prof. at PolyU)</td></tr>
