--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[07/2024] Two papers were accepted by ECCV 2024.
+		[08/2023] Recent publications in 2024 Summer: 1 MedIA, 1 NN, 1 JBHI, 2 ECCV.
 	</li>
 	<li>
 		[06/2024] Three papers were accepted by MICCAI 2024.
@@ -188,18 +188,37 @@
 		<a href="https://arxiv.org/abs/2407.15158" target="_blank">HERGen: Elevating Radiology Report Generation with Longitudinal Data</a><br>
 		Fuying Wang, Shenghui Du, <b>Lequan Yu</b>.<br>
 		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2024.</br>
-	</li>
+	</li>	
+		<p style="margin-top:3px">
+			[<a href="https://github.com/fuying-wang/HERGen" target="_blank">code</a>]
+		</p>
+	
 	<li>
 		<a href="https://arxiv.org/abs/2407.11448" target="_blank">cDP-MIL: Robust Multiple Instance Learning via Cascaded Dirichlet Process</a><br>
 		Yihang Chen, Tsai Hor Chan, Guosheng Yin, Yuming Jiang, <b>Lequan Yu</b>.<br>
 		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2024.</br>
 	</li>
-
+		<p style="margin-top:3px">
+			[<a href="https://github.com/HKU-MedAI/cDPMIL" target="_blank">code</a>]
+		</p>
+	
+	<li>
+		<a href="" target="_blank">Multi-task Heterogeneous Graph Learning on Electronic Health Records</a><be>
+		Tsai Hor Chan, Guosheng Yin, Kyongtae Bae, <b>Lequan Yu</b>.<br>
+		<em>Neural Networks</em>, 2024.</br>
+	</li>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/HKU-MedAI/MulT-EHR" target="_blank">code</a>]
+		</p>
+		
 	<li>
 		<a href="https://arxiv.org/abs/2402.03302" target="_blank">Swin-UMamba: Mamba-based UNet with ImageNet-based pretraining</a><br>
 		Jiarun Liu, Hao Yang, Hong-Yu Zhou, Yan Xi, <b>Lequan Yu</b>, Yizhou Yu, Yong Liang, Guangming Shi, Shaoting Zhang, Hairong Zheng, Shanshan Wang.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2024.</br>
 	</li>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/JiarunLiu/Swin-UMamba" target="_blank">code</a>]
+		</p>
 	<li>
 		<a href="" target="_blank">ORCGT: Ollivier-Ricci Curvature-based Graph Model for Lung STAS Prediction</a><br>
 		Min Cen, Zheng Wang, Zhenfeng Zhuang, Hong Zhang, Dan Su, Zhen Bao, Weiwei Wei, Baptiste Magnier, <b>Lequan Yu</b>, Liansheng Wang.<br>
@@ -215,11 +234,17 @@
 		Yuyin Zhou, Xianhang Li, Fengze Liu, Qingyue Wei, Xuxi Chen, <b>Lequan Yu</b>, Cihang Xie, Matthew P. Lungren, Lei Xing.<br>
 		<em>IEEE/CVF Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2024.</br>
 	</li>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/yuyinzhou/l2b" target="_blank">code</a>]
+		</p>
 	<li>
 		<a href="https://ojs.aaai.org/index.php/AAAI/article/view/28135" target="_blank">Boosting Multiple Instance Learning Models for Whole Slide Image Classification: A Model-agnostic Framework Based on Counterfactual Inference</a><br>
 		Weiping Lin, Zhenfeng Zhuang, <b>Lequan Yu</b>, Liansheng Wang.<br>
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2024.</br>
 	</li>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/centurion-crawler/CIMIL" target="_blank">code</a>]
+		</p>
 	<li>
 		<a href="https://arxiv.org/abs/2401.11674" target="_blank">Memory-Efficient Prompt Tuning for Incremental Histopathology Classification</a><br>
 		Yu Zhu, Kang Li, <b>Lequan Yu</b>, Pheng-Ann Heng.<br>
