--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 		</p>
 	
 	<li>
-		<a href="" target="_blank">Multi-task Heterogeneous Graph Learning on Electronic Health Records</a><be>
+		<a href="" target="_blank">Multi-task Heterogeneous Graph Learning on Electronic Health Records</a><br>
 		Tsai Hor Chan, Guosheng Yin, Kyongtae Bae, <b>Lequan Yu</b>.<br>
 		<em>Neural Networks</em>, 2024.</br>
 	</li>
