--- a/index.html
+++ b/index.html
@@ -238,6 +238,12 @@
 			[<a href="https://github.com/yuyinzhou/l2b" target="_blank">code</a>]
 		</p>
 	<li>
+		<a href="https://ieeexplore.ieee.org/document/10433413" target="_blank"> A Dual Enrichment Synergistic Strategy to Handle Data Heterogeneity for Domain Incremental Cardiac
+Segmentation</a><br>
+		Kang Li, Yu Zhu, <b>Lequan Yu</b>, Pheng-Ann Heng.<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2024.</br>
+	</li>
+	<li>
 		<a href="https://ojs.aaai.org/index.php/AAAI/article/view/28135" target="_blank">Boosting Multiple Instance Learning Models for Whole Slide Image Classification: A Model-agnostic Framework Based on Counterfactual Inference</a><br>
 		Weiping Lin, Zhenfeng Zhuang, <b>Lequan Yu</b>, Liansheng Wang.<br>
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2024.</br>
