--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
 <p style="color:red;">
 	We are looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in medical AI, multimodal learning, computational pathology, and biomedical informatics. 
 	Welcome to drop me an email with your CV and transcripts. <br>
+</p>
 
+<p style="color:red;">
 	If you are an HKU student interested in doing research with me, please send me an email.
 </p>
 
