--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
 				<h3>Assistant Professor</h3>
 				<p>
+					Rm 226, Run Run Shaw Building<br>
 					Division of Statistics and Actuarial Science<br>
 					School of Computing and Data Science<br>
 					The University of Hong Kong <br>
-					Hong Kong<br>
 					<br>
 					
 					Email: lqyu [at] hku [dot] hk<br>
-					Rm 226, Run Run Shaw Building
+					
 			
 				</p>
 				<p> <a href="https://scholar.google.com/citations?user=llXf3wUAAAAJ&hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
