--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-<link rel="shortcut icon" href="myIcon.ico">
+<link rel="icon" href="pic/hku.png">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Lequan Yu, Yu Lequan, Lequan, HKU, University of Hong Kong, Stanford, CUHK, The Chinese University of Hong Kong, ZJU, Zhejiang University, Computer, Vision, Machine, Learning, Medical Image, Healthcare"> 
+<meta name="keywords" content="Lequan Yu, Yu Lequan, Lequan, HKU, University of Hong Kong, Stanford, CUHK, The Chinese University of Hong Kong, ZJU, Zhejiang University, Artificial Intelligence, Computer, Vision, Machine, Learning, Medical Image, Multimodal Learning, Medical AI, AI for Healthcare"> 
 <meta name="description" content="Lequan Yu is an Assistant Professor at HKU.">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
