--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="description" content="Lequan Yu is an Assistant Professor at HKU.">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
-<title>Lequan Yu Homepage</title>
+<title>Lequan Yu</title>
 
 
 <script>
