--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[09/2024] One paper was accepted by TPAMI.
+	</li>
+	<li>
 		[08/2023] Recent publications in 2024 Summer: 1 MedIA, 1 NN, 1 JBHI, 2 ECCV.
 	</li>
 	<li>
@@ -190,6 +193,12 @@
 -->
 	<p><font face="Arial" size="4"><b>2024</b></font></p>
 	<ul>
+	<li>
+		<a href="" target="_blank">Multi-sensor Learning Enables Information Transfer across Different Sensory Data and Augments Multi-modality Imaging
+</a><br>
+		Lingting Zhu, Yizheng Chen, Lianli Liu, Lei Xing, <b>Lequan Yu</b>.<br>
+		<em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em> (<i><b>TPAMI</b></i>), 2024.</br>
+	</li>	
 	<li>
 		<a href="https://arxiv.org/abs/2407.15158" target="_blank">HERGen: Elevating Radiology Report Generation with Longitudinal Data</a><br>
 		Fuying Wang, Shenghui Du, <b>Lequan Yu</b>.<br>
