--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 	<p><font face="Arial" size="4"><b>2024</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">Multi-sensor Learning Enables Information Transfer across Different Sensory Data and Augments Multi-modality Imaging
+		<a href="https://ieeexplore.ieee.org/document/10685142" target="_blank">Multi-sensor Learning Enables Information Transfer across Different Sensory Data and Augments Multi-modality Imaging
 </a><br>
 		Lingting Zhu, Yizheng Chen, Lianli Liu, Lei Xing, <b>Lequan Yu</b>.<br>
 		<em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em> (<i><b>TPAMI</b></i>), 2024.</br>
