--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[09/2024] One paper was accepted by NeurIPS 2024.
+	</li>
+	<li>
 		[09/2024] One paper was accepted by TPAMI.
 	</li>
 	<li>
