--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[10/2024] One paper was accepted by TMI.
+	</li>
+	<li>
 		[09/2024] One paper was accepted by NeurIPS 2024.
 	</li>
 	<li>
@@ -197,11 +200,28 @@
 	<p><font face="Arial" size="4"><b>2024</b></font></p>
 	<ul>
 	<li>
+		<a href="" target="_blank">Unleash the Power of State Space Model for Whole Slide Image with Local Aware Scanning and Importance Resampling</a><br>
+		Yanyan Huang, Weiqin Zhao, Yu Fu, Lingting Zhu, <b>Lequan Yu</b>.<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2024.</br>
+	</li>	
+		<p style="margin-top:3px">
+			[<a href="https://github.com/HKU-MedAI/PAM" target="_blank">code</a>]
+		</p>
+	
+	<li>
+		
+	<li>
 		<a href="https://ieeexplore.ieee.org/document/10685142" target="_blank">Multi-sensor Learning Enables Information Transfer across Different Sensory Data and Augments Multi-modality Imaging
 </a><br>
 		Lingting Zhu, Yizheng Chen, Lianli Liu, Lei Xing, <b>Lequan Yu</b>.<br>
 		<em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em> (<i><b>TPAMI</b></i>), 2024.</br>
+	</li>
 	</li>	
+		<p style="margin-top:3px">
+			[<a href="https://github.com/HKU-MedAI/MSL" target="_blank">code</a>]
+		</p>
+	
+	<li>
 	<li>
 		<a href="https://arxiv.org/abs/2407.15158" target="_blank">HERGen: Elevating Radiology Report Generation with Longitudinal Data</a><br>
 		Fuying Wang, Shenghui Du, <b>Lequan Yu</b>.<br>
