--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <link rel="icon" href="pic/hku.png">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Lequan Yu, Yu Lequan, Lequan, HKU, University of Hong Kong, Stanford, CUHK, The Chinese University of Hong Kong, ZJU, Zhejiang University, Artificial Intelligence, Computer, Vision, Machine, Learning, Medical Image, Multimodal Learning, Medical AI, AI for Healthcare"> 
-<meta name="description" content="Lequan Yu is an Assistant Professor at HKU.">
+<meta name="keywords" content="Shuai Yu, Yu Shuai, DHU, Donghua University, Shanghai, Artificial Intelligence, Computer, Vision, Machine, Learning, Medical Image, Multimodal Learning, Medical AI, AI for Healthcare"> 
+<meta name="description" content="Shuai Yu is an Assistant Professor at DHU.">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
 <title>Shuai Yu</title>
